--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Coming Soon</title>
+  <link rel="icon" href="oofer.png" type="image/x-icon" />
+  <title>Alligator</title>
+  <meta content="Alligator | Official Website" property="og:title" />
+  <meta content="The official website for the amazing twitch streamer, alligator!" property="og:description" />
+  <meta content="https://alligator.gay" property="og:url" />
+  <meta content="https://alligator.gay/alli.webp" property="og:image" />
+  <meta content="#000000" data-react-helmet="true" name="theme-color" />
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
   body {
